--- a/stargate/docker-compose.yml
+++ b/stargate/docker-compose.yml
@@ -21,11 +21,11 @@ services:
       - "8600:8600"
     command: "agent -server -bootstrap -ui -client 0.0.0.0"
 
-  stargate:
-    image: "local/consul-poc/stargate:latest"
-    hostname: stargate.consul.poc
-    networks:
-      - consul_network
+  # stargate:
+  #   image: "local/consul-poc/stargate:latest"
+  #   hostname: stargate.consul.poc
+  #   networks:
+  #     - consul_network
 
 networks:
   consul_network:
