--- a/stargate/docker-compose.yml
+++ b/stargate/docker-compose.yml
@@ -12,7 +12,8 @@ version: "3"
 services:
   consul-server:
     image: "library/consul:1.0.7"
-    hostname: server1.consul.poc
+    container_name: consul
+    hostname: consul
     networks:
       - consul_network
     ports:
@@ -21,11 +22,14 @@ services:
       - "8600:8600"
     command: "agent -server -bootstrap -ui -client 0.0.0.0"
 
-  # stargate:
-  #   image: "local/consul-poc/stargate:latest"
-  #   hostname: stargate.consul.poc
-  #   networks:
-  #     - consul_network
+  stargate:
+    image: "local/consul-poc/stargate:latest"
+    container_name: stargate
+    hostname: stargate
+    environment:
+      - CONSUL_ADDRESS=consul:8500
+    networks:
+      - consul_network
 
 networks:
   consul_network:
