--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -6,3 +6,28 @@
 #
 # Consul Network proof of concept
 # (c) 2018 Adam K Dean
+
+version: "3.5"
+
+services:
+  consult-agent:
+    image: "library/consul:1.0.7"
+    container_name: consul-agent-1
+    hostname: consul-agent-1
+    networks:
+      - test-network
+    command: "agent -retry-join consul-server -client 0.0.0.0"
+
+  gateway:
+    image: "local/consul-poc/gateway:latest"
+    container_name: gateway
+    hostname: gateway
+    environment:
+      - CONSUL_ADDRESS=consul-agent-1:8500
+    networks:
+      - test-network
+
+networks:
+  test-network:
+    external: true
+    name: global
