add server address + port to gateway manifest

--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     hostname: gateway
     environment:
       - CONSUL_ADDRESS=consul-agent-1:8500
+      - LISTEN_PORT=8000
     ports:
       - 8000:8000
     networks:
